C言語へ変更

--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,12 @@
         </li>
         <li itemscope="itemscope" itemtype="http://data-vocabulary.org/Breadcrumb">
           <a href="" itemprop="url">
-            <span itemprop="title">制作講座</span>
+            <span itemprop="title">HelloWorld</span>
           </a>
         </li>
         <li itemscope="itemscope" itemtype="http://data-vocabulary.org/Breadcrumb">
           <a href="" itemprop="url">
-            <span itemprop="title">Verilog HDL</span>
+            <span itemprop="title">C言語のHelloWorld</span>
           </a>
         </li>
       </ul>
@@ -60,36 +60,19 @@
             <el-button type="primary">Good!</el-button>
           </section>
           <div class="description">
-            <pre class="line-numbers code-css" data-no="12">
-<code class="language-css" data-language="css">.line-numbers-rows&gt;span {
-  pointer-events: none;
-  display: block;
-  counter-increment: linenumber;
-}</code>
-</pre>
-            <pre class="line-numbers code-html">
-<code class="language-html" data-language="html">&lt;head&gt;
-    &lt;link rel="stylesheet" href="prism.css"&gt;
-    &lt;script type="text/javascript" src="prism.js"&gt;&lt;/script&gt;
-&lt;/head&gt;</code>
-</pre>
-            <pre class="line-numbers code-css" data-no="13">
-<code class="language-css" data-language="css">.line-numbers-rows&gt;span {
-  pointer-events: none;
-  display: block;
-  counter-increment: linenumber;
-}</code>
-</pre>
-            <pre class="line-numbers code-js" data-no="14">
-<code class="language-javascript" data-language="js">var provider = new firebase.auth.GoogleAuthProvider();
-firebase.auth().onAuthStateChanged(function (user) {
-  if (user) {
-    // console.log(user)
-  } else {
+            <pre class="line-numbers code-c" data-no="1">
+<code class="language-c" data-language="c">#include &lt;stdio.h&gt;
 
-  }
-})</code>
+int main(void){
+  printf(&quot;Hello World&quot;);
+
+  return 0;
+}</code>
 </pre>
+            <pre class="line-numbers code-ruby" data-no="2">
+<code class="language-ruby" data-language="ruby">puts "Hello World"</code>
+</pre>
+
           </div>
         </div>
         <div class="right">
