参考資料を挿入した

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,15 @@
             <el-button type="primary">Good!</el-button>
           </section>
           <div class="description">
+            <article class="sankou">
+              <span class="title">参考資料1</span>
+              <p> こんにちはこれが参考資料です</p>
+              <p>
+                Paiza.IOへはこのURLから進むことができます。<a href="https://paiza.io/ja" 　target="_blank">https://paiza.io/ja</a>
+              </p>
+              <p>実行環境のインストール方法は〇〇の動画を参考にしてください</p>
+            </article>
+
             <pre class="line-numbers code-c" data-no="1">
 <code class="language-c" data-language="c">#include &lt;stdio.h&gt;
 
